--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "josejimenez/cubestore",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "A simple store and order admin.",
     "keywords": [
         "framework",
         "laravel"
@@ -15,12 +15,12 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2"
+
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
-        "laravel/ui": "^3.2",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
